--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+* {
+
+    margin: 0;
+
+    padding: 0;
+
+    box-sizing: border-box;
+
+}
+
 body {
     font-family: Helvetica, Arial, sans-serif;
 
@@ -10,6 +20,8 @@ header {
 
     background-color:#39a6b2;
 
+
+
 }
 
 header h1 {
@@ -20,6 +32,8 @@ header h1 {
     color:#fce138;
 
     margin: 0;
+
+    display: inline;
 
 }
 
@@ -52,5 +66,141 @@ header nav ul li a {
     font-weight: lighter;
 
     font-size: 22px;
+
+}
+
+footer {
+
+    background: #fce138;
+
+    width: 100%;
+
+    padding: 40px 25px ;
+
+}
+
+footer div {
+
+    float: right;
+
+    line-height: 1.5;
+
+    text-align: right;
+
+}
+
+footer h2 {
+
+    display: inline;
+
+    color: #024e76;
+
+    font-size: 30px;
+
+    margin: 0;
+
+}
+
+footer a {
+
+    color:#024e76;
+}
+
+.hero {
+
+    padding: 60px;
+
+    background-image: url("../images/hero-bg.jpg");
+   
+    height: 600px;
+
+    background-size: cover;
+
+    background-position: center;
+
+    position: relative;
+
+}
+
+section {
+
+    padding:60px;
+
+}
+
+.hero-form {
+
+    background-color:#fce138;
+
+    padding: 20px;
+
+    width: 500px;
+
+    color:#024e76;
+
+    border-style: solid;
+
+    border-width: 3px;
+
+    border-color: #024e76;
+
+    position: absolute;
+
+    bottom: 120px;
+
+    right: 140px;
+
+
+}
+
+.hero-form h3 {
+
+    font-size: 24px;
+
+    margin: 0;
+
+}
+
+.hero-form p {
+
+    margin: 5px 0 15px 0;
+
+}
+
+.form-input {
+
+    border: 1px solid #024e76;
+
+    display: block;
+
+    padding: 7px 15px;
+
+    font-size: 16px;
+
+    color: #024e76;
+
+    width: 100%;
+
+    margin-bottom: 15px;
+
+}
+
+.hero-form label {
+
+    margin: 0 5px;
+
+}
+
+.hero-form button {
+
+    color:#fce138;
+
+    background-color:#024e76;
+
+    border: none;
+
+    padding: 10px 20px;
+
+    font-size: 16px;
     
 }
